--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,50 @@
-# Compiled class file
+### Java / Kotlin
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
 *.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Архивы/артефакты (если случайно собрал локально)
+*.jar
+*.war
+*.ear
+
+### Gradle
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
+gradle-app.setting
+
+### IntelliJ IDEA / JetBrains
+.idea/
+*.iml
+*.iws
+*.ipr
+out/
+
+### VS Code
+.vscode/
+
+### Spring Boot
+spring.log
+
+### Logs
+logs/
+*.log
+*.out
+
+### OS (macOS)
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+
+### Temp
+tmp/
+temp/
+*.swp
+*.swo
+*~
